--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   liquibase:
-    enabled: false
+    enabled: true
   datasource:
-    url: jdbc:h2:file:./db # в корне проект файл бд db.mv.db
-    username: u # имя пользователя консоли
-    password: 1 # пароль консоли
+    url: jdbc:h2:file:./db
+    username: u
+    password: 1
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
